syntax = "proto3";
package proto ;
option go_package = "./";

message Block {
  string prevHash = 1 ;
  string data = 2 ;
  string hash = 3 ;
}
//CLIENT send a string as a json
message BlockRequest {
  string data = 1 ;
}
message BlockResponse {
  string hash = 2 ;
}
message ChainStreamResponse {
  Block block = 1 ;
}
message ChainRequest {}
message ChainResponse {
  repeated Block blocks = 1 ;
}
service BlockChain {
  rpc AddBlock(BlockRequest) returns (BlockResponse){}
  rpc StreamGetBlocks(ChainRequest) returns (stream ChainStreamResponse){}
  rpc GetChain(ChainRequest) returns(ChainResponse){}
}
